--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,40 +1,61 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash # Remove or comment out this line to display the site sidebar on this page.
+title: StarVLA Documentation
+description: A lego-like codebase for VLM-to-VLA development, with modular frameworks, benchmarks, and training recipes.
+template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  tagline: Build, train, and evaluate Vision-Language-Action models with a modular, extensible codebase.
   actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: Quick Start
+      link: /getting-started/quick-start/
+    - text: Model Zoo
+      link: /model-zoo/
+    - text: GitHub
+      link: https://github.com/starVLA/starVLA
       variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## What is StarVLA?
+
+StarVLA is a modular and flexible codebase for developing Vision-Language Models (VLMs) into Vision-Language-Action (VLA) models. Each component (model, data, trainer, configuration, evaluation) is designed for high cohesion and low coupling, enabling plug-and-play research and fast iteration.
+
+## Docs at a Glance
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Change page layout" icon="document">
-		Delete `template: splash` in `src/content/docs/index.mdx` to display a
-		sidebar on this page.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+  <Card title="🚀 Quick Start" icon="rocket">
+    Environment setup, quick checks, evaluation, and training workflows.
+
+    [Get Started →](/getting-started/quick-start/)
+  </Card>
+  <Card title="📖 Project Overview" icon="document">
+    What StarVLA is, current capabilities, and key links.
+
+    [Read Overview →](/overview/)
+  </Card>
+  <Card title="🧩 Lego-like Design" icon="puzzle">
+    The modular design principles behind StarVLA.
+
+    [View Design →](/design/lego-like/)
+  </Card>
+  <Card title="🤖 Model Zoo" icon="add-document">
+    Released models and finetuning checkpoints.
+
+    [View Model Zoo →](/model-zoo/)
+  </Card>
+  <Card title="📚 FAQ" icon="open-book">
+    Common questions about configs, backbones, and training.
+
+    [Read FAQ →](/faq/)
+  </Card>
 </CardGrid>
+
+## Latest Updates
+
+- Pipeline support for Behavior-1K, RoboTwin 2.0, and CALVIN with shared baseline collaboration.
+- RoboCasa evaluation support with SOTA performance without pretraining.
+- Regression checks and ongoing updates in the Daily Development Log.
+
+## Languages
+
+This documentation is maintained in English and Simplified Chinese. Keep bilingual pages in sync and mirror their paths across locales.
